tests/NormalTests/paczka2/big_fuzzy/83107876.err
Error in line 7: S660 S660 9,0
Error in line 39: S660 A95 33,7
Error in line 37: Gdy2S A787 54,8
Error in line 42: Gdy2S S660 43,3
Error in line 44: N9X8u9bWqXN A95 32,7
Error in line 49: N9X8u9bWqXN A193 15,3
Error in line 35: v9hxlBRf7y6 S660 156,7
Error in line 63: S660 S660 53,8
Error in line 56: v9hxlBRf7y6 A787 85,5
Error in line 74: zX8C5Brr S660 91,6
Error in line 71: S660 S660 579,3
Error in line 75: zX8C5Brr A193 13,4
Error in line 94: N9X8u9bWqXN S660 62,3
Error in line 97: Gdy2S S660 47,8
Error in line 110: GdyGS A193 49,G
Error in line 106: Dfi A787 42,4
Error in line 113: zX8C5Brr S660 60,o
Error in line 107: Gdy2S A193 18,7
Error in line 114: zX8C5Brr S660 138,8
Error in line 134: Dfi A787 41,3
Error in line 121: Gdy2S A95 28,2
Error in line 132: N9X8u9bWqXN S660 0,2
Error in line 137: Gdy2S A193 65,0
Error in line 142: zX8C5Brr A193 40,5
Error in line 136: v9hxlBRf7y6 A193 18,2
Error in line 153: Dfi A95 5,8
Error in line 180: rMirfd A787 46,6
Error in line 190: rMirfd A95 o03,3
Error in line 193: Gdy2S A95 40,34
Error in line 188: v9hxlBRf7y6 A193 99,8
Error in line 185: zX8C5Brr A193 33,7
Error in line 186: rMirfd A95 53,5
Error in line 216: zX8C5Brr A95 -3,4
Error in line 210: Dfi S660 112,2
Error in line 226: N9X8u9bWqXN A787 62,9
Error in line 230: v9hxlBRf7y6 A95 35,6
Error in line 233: S660 A95 62,8
